--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
-    "file-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
-    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
-    "url-loader": "^4.1.1",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
   }
